# infrastructure_report_gis

./: .env.example  .gitignore  01_コンペ提案書.docx  02_要件定義・システム仕様書.docx  03_データ_AI_シミュレーション設計書.docx  04_画面_API設計書.docx  05_試験_実証_運用設計書.docx  06_事業化計画_ロードマップ.docx  Makefile  README.md  database_schema.sql  docker-compose.yml  manifest.json  openapi.yaml
.github/workflows/: ci.yml  deploy-cloudflare.yml  full-import.yml  import-production.yml
apps/api/: Dockerfile  Dockerfile.cloudflare  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_postgis.py
apps/api/app/: main.py
apps/api/app/cli/: import_ponds.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: models.py
apps/api/app/providers/: satellite.py  simulation.py
apps/api/app/services/: importer.py  risk.py
apps/api/scripts/: seed_sample.py
apps/api/tests/: test_api.py  test_bbox.py  test_cloudflare_deployment.py  test_importer.py  test_postgis_integration.py  test_risk.py
apps/web/: Dockerfile  cloudflare-env.d.ts  next-env.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  wrangler.jsonc
apps/web/src/: api.ts  (+1 more)
artifacts/: import-dryrun-100.json  import-dryrun-1000.json  import-full.json  import-rerun.json  import-sample.json
assets/: readme.md
docs/: assumptions.md  implementation-plan.md
docs/benchmarks/: api-query-performance.md  full-import-result.md  import-baseline.md  import-optimized.md
scripts/: r2_download_ledger.sh  r2_upload_import_results.sh
(+38 files in other folders)
