[project]
name = "tameike-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "sqlalchemy>=2", "pydantic-settings>=2", "alembic>=1.13", "psycopg[binary]>=3.2", "geoalchemy2>=0.15", "openpyxl>=3.1", "python-multipart>=0.0.9"]
[project.optional-dependencies]
dev=["pytest>=8", "httpx>=0.27", "ruff>=0.5", "mypy>=1.10"]
[tool.ruff]
line-length=100
